Mobile responsive Product View page done

--- a/category.html
+++ b/category.html
@@ -309,7 +309,7 @@
           <ol class="breadcrumb es-breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Bosh sahifa</a></li>
             <li class="breadcrumb-item"><a href="#">Kitoblar</a></li>
-            <li aria-current="page" class="breadcrumb-item active">Diniy ma’rifiy adabiyot</li>
+            <li aria-current="page" class="breadcrumb-item active">Diniy kitoblar</li>
           </ol>
         </nav>
 
