22 november sent file to Client

--- a/category.html
+++ b/category.html
@@ -878,6 +878,75 @@
         </div>
       </div>
     </section>
+
+    <section class="es-collections-section es-category-collections">
+      <div class="container">
+        <h3 class="section-title es-header-to-right">Коллекции</h3>
+
+        <div class="row es-collection-list collection-slick list-slick">
+          <div class="col-md-4">
+            <div class="es-collection-item" style="background-image: url(img/collection.jpg)">
+              <div class="es-collection-title">
+                <a href="collection.html">Hadis kitoblar to‘plami</a>
+              </div>
+              <div class="es-collection-info">
+                Muslim hadislaridan tortib sahihiy Buxoriygacha
+                bo‘lgan, hadisga oid 32 xil kitoblar to‘plami
+              </div>
+              <button class="btn btn-more">подробно <img src="img/ic_more_arrow.svg" /></button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="es-collection-item" style="background-image: url(img/collection.jpg)">
+              <div class="es-collection-title">
+                <a href="collection.html">Hadis kitoblar to‘plami</a>
+              </div>
+              <div class="es-collection-info">
+                Muslim hadislaridan tortib sahihiy Buxoriygacha
+                bo‘lgan, hadisga oid 32 xil kitoblar to‘plami
+              </div>
+              <button class="btn btn-more">подробно <img src="img/ic_more_arrow.svg" /></button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="es-collection-item" style="background-image: url(img/collection.jpg)">
+              <div class="es-collection-title">
+                <a href="collection.html">Hadis kitoblar to‘plami</a>
+              </div>
+              <div class="es-collection-info">
+                Muslim hadislaridan tortib sahihiy Buxoriygacha
+                bo‘lgan, hadisga oid 32 xil kitoblar to‘plami
+              </div>
+              <button class="btn btn-more">подробно <img src="img/ic_more_arrow.svg" /></button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="es-collection-item" style="background-image: url(img/collection.jpg)">
+              <div class="es-collection-title">
+                <a href="collection.html">Hadis kitoblar to‘plami</a>
+              </div>
+              <div class="es-collection-info">
+                Muslim hadislaridan tortib sahihiy Buxoriygacha
+                bo‘lgan, hadisga oid 32 xil kitoblar to‘plami
+              </div>
+              <button class="btn btn-more">подробно <img src="img/ic_more_arrow.svg" /></button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="es-collection-item" style="background-image: url(img/collection.jpg)">
+              <div class="es-collection-title">
+                <a href="collection.html">Hadis kitoblar to‘plami</a>
+              </div>
+              <div class="es-collection-info">
+                Muslim hadislaridan tortib sahihiy Buxoriygacha
+                bo‘lgan, hadisga oid 32 xil kitoblar to‘plami
+              </div>
+              <button class="btn btn-more">подробно <img src="img/ic_more_arrow.svg" /></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="footer-content">
